logs/offboard_pkg/build.make.319.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘double TaskManager::get_yaw()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:66:5: error: ‘q’ was not declared in this scope
   66 |     q = local_pose.pose.orientation;
      |     ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
